fixing white space under main elem.

--- a/css/weather-styles.css
+++ b/css/weather-styles.css
@@ -14,6 +14,7 @@
 body {
     background-color: var(--bg-color);
     color: whitesmoke !important;
+    height: 100%;
 }
 
 h1,
@@ -30,7 +31,7 @@ header {
 
 main {
     background-color: var(--bg-color-secondary);
-    height: 100vh;
+    height: 150vh;
 }
 
 .weather-blocks {
